--- a/shaded/client/pom.xml
+++ b/shaded/client/pom.xml
@@ -37,13 +37,13 @@
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-client</artifactId>
-      <scope>provided</scope>
+<!--      <scope>provided</scope>-->
     </dependency>
     <!-- Have RocksDB dependency in provided scope by default to reduce client jar size -->
     <dependency>
       <groupId>org.rocksdb</groupId>
       <artifactId>rocksdbjni</artifactId>
-      <scope>provided</scope>
+<!--      <scope>provided</scope>-->
     </dependency>
     <!-- Runtime logging dependencies -->
     <dependency>
